# flowdoc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
examples/: README.md  data_import.py  fastapi_factory.py  payment_retry.py
examples/fastapi/: models.py  product_inventory_api.dot  product_inventory_api.mmd  routes.py  service.py
flowdoc/: __init__.py  cli.py  discovery.py  generator.py  models.py  parser.py
tests/: test_cli.py  test_discovery.py  test_generator.py  test_parser.py
tests/fixtures/cross_module/ignored/.hidden/: secret.py
tests/fixtures/cross_module/orders/: processor.py  validation.py
tests/fixtures/cross_module/payments/: gateway.py
